--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "format": "prettier --write \"**/*.{js,jsx,css}\""
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "next": "15.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1"
